--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
+    "emailjs": "^4.0.3",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
@@ -18,6 +20,7 @@
     "react-router-dom": "^6.26.2",
     "react-type-animation": "^3.2.0",
     "react-typed": "^2.0.12",
+    "sonner": "^1.5.0",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
