--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "classnames": "^2.5.1",
     "emailjs": "^4.0.3",
+    "framer-motion": "^11.11.7",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.3.0",
     "react-lazy-load-image-component": "^1.6.2",
     "react-router-dom": "^6.26.2",
